<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_demo_request">

    <fragment
        android:id="@+id/nav_home"
        android:name="be.tftic.web2023.demo11_async_webrequest.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_demo_async"
        android:name="be.tftic.web2023.demo11_async_webrequest.ui.demoasync.DemoAsyncFragment"
        android:label="@string/menu_demo_async"
        tools:layout="@layout/fragment_demo_async" />

    <fragment
        android:id="@+id/nav_demo_request"
        android:name="be.tftic.web2023.demo11_async_webrequest.ui.demorequest.DemoRequestFragment"
        android:label="@string/menu_demo_request"
        tools:layout="@layout/fragment_demo_request" />

</navigation>